--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,11 +10,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
